--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+
     <title>Fashion</title>
 </head>
 <body>
@@ -323,11 +327,85 @@
             <h1>LATEST PRODUCTS</h1>
             <p>There are many variations of passages of lorem ipsum available.</p>
         </div>
-        <div class="container">
+        <div class="multiple-items slider">
+            <div class="card">
+                <div class="img">
+                    <img src="./img/fashion-product-10.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Sweater Wide Sleeve</h2>
+                    <h3>Fashion Colored</h3>
+                    <p>$599.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/fashion-product-1.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Sweater Wide Sleeve</h2>
+                    <h3>Fashion Colored</h3>
+                    <p>$599.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/fashion-product-6.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Sweater Wide Sleeve</h2>
+                    <h3>Fashion Colored</h3>
+                    <p>$599.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/fashion-colored-product-3.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Sweater Wide Sleeve</h2>
+                    <h3>Fashion Colored</h3>
+                    <p>$599.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/fashion-colored-product-5.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Sweater Wide Sleeve</h2>
+                    <h3>Fashion Colored</h3>
+                    <p>$599.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/fashion-colored-product-6.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Sweater Wide Sleeve</h2>
+                    <h3>Fashion Colored</h3>
+                    <p>$599.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./img/fashion-product-10.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Sweater Wide Sleeve</h2>
+                    <h3>Fashion Colored</h3>
+                    <p>$599.00</p>
+                </div>
+            </div>
         </div>
     </section>
 
 
-    
-</body>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="script.js"></script>
+
 </html>
